Bugs corrigidos e tudo em portugues

--- a/collaborations.html
+++ b/collaborations.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documen</title>
-    <link rel="stylesheet" href="css/openings.css" />
+    <link rel="stylesheet" href="css/collaborations.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -32,78 +32,26 @@
 
       <nav class="desktop">
         <ul>
-          <li>
-            <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
+          <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+          <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+          <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
           </li>
-          <li>
-            <a href="./members.html" target="_blank" rel="noopener noreferrer"
-              >Members</a
-            >
-          </li>
-          <li>
-            <a
-              href="./publications.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Publications</a
-            >
-          </li>
-          <li>
-            <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
-            >
-          </li>
-          <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Collaborations</a
-            >
-          </li>
-          <li>
-            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
-            >
-          </li>
+          <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+          <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+          <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
         </ul>
       </nav>
       <!--desktop-->
 
       <nav class="mobile" id="mobile">
         <ul>
-          <li>
-            <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
+          <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+          <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+          <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
           </li>
-          <li>
-            <a href="./members.html" target="_blank" rel="noopener noreferrer"
-              >Members</a
-            >
-          </li>
-          <li>
-            <a
-              href="./publications.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Publications</a
-            >
-          </li>
-          <li>
-            <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
-            >
-          </li>
-          <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Collaborations</a
-            >
-          </li>
-          <li>
-            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
-            >
-          </li>
+          <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+          <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+          <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
         </ul>
       </nav>
       <!--mobile-->
@@ -115,13 +63,36 @@
     <main class="cont">
       <div class="collaborations">
         <div class="collaborations-single">
-          
-        </div><!--collaborations-single-->
-        <div class="collaborations-single">
-          
-        </div><!--collaborations-single-->
-      </div><!--collaborations-->
-    </main><!--cont-->
+          <div class="photo-collaborations">
+            <div class="univer">
+              <img src="./imgs/640px-Flag_of_Brazil.svg.webp" alt="" />
+            </div>
+            <!--univer-->
+          </div>
+          <!--photo-collaborations-->
+
+          <div class="description-collaborations">
+            <h1>Nome da universidade</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+              magni eaque maiores similique at voluptas necessitatibus accusamus
+              minus, consectetur, excepturi hic facere? Error ratione neque quas
+              exercitationem eos dolore excepturi?
+            </p>
+          </div>
+          <!--description-collaborations-->
+        </div>
+        <!--collaborations-single-->
+
+        <div class="collaborations-single"></div>
+        <!--collaborations-single-->
+
+        <div class="collaborations-single"></div>
+        <!--collaborations-single-->
+      </div>
+      <!--collaborations-->
+    </main>
+    <!--cont-->
 
     <footer>
       <div class="footer-singles">
@@ -170,6 +141,9 @@
         <!--logo-footer-->
       </div>
       <!--footer-singles-->
+      <div class="versionEn">
+        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
+    </div><!--versionEn-->
     </footer>
     <script src="./scripts/heade.js"></script>
   </body>
