--- a/members.html
+++ b/members.html
@@ -47,12 +47,7 @@
         <ul>
           <li>
             <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
-          </li>
-          <li>
-            <a href="./members.html" target="_blank" rel="noopener noreferrer"
-              >Members</a
+              >Pesquisa</a
             >
           </li>
           <li>
@@ -60,12 +55,12 @@
               href="./publications.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Publications</a
+              >Publicações</a
             >
           </li>
           <li>
             <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
+              >Noticias</a
             >
           </li>
           <li>
@@ -73,12 +68,17 @@
               href="./collaborations.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Collaborations</a
+              >Colaborações</a
+            >
+          </li>
+          <li>
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Membros</a
             >
           </li>
           <li>
             <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
+              >Contato</a
             >
           </li>
         </ul>
@@ -89,12 +89,7 @@
         <ul>
           <li>
             <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
-          </li>
-          <li>
-            <a href="./members.html" target="_blank" rel="noopener noreferrer"
-              >Members</a
+              >Pesquisa</a
             >
           </li>
           <li>
@@ -102,12 +97,12 @@
               href="./publications.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Publications</a
+              >Publicações</a
             >
           </li>
           <li>
             <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
+              >Noticias</a
             >
           </li>
           <li>
@@ -115,12 +110,17 @@
               href="./collaborations.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Collaborations</a
+              >Colaborações</a
+            >
+          </li>
+          <li>
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Membros</a
             >
           </li>
           <li>
             <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
+              >Contato</a
             >
           </li>
         </ul>
@@ -134,16 +134,16 @@
     <div class="content">
       <div class="members-detalhes">
         <div class="title-members">
-          <h1>Members</h1>
+          <h1>Membros</h1>
         </div>
         <!--tittle-members-->
 
         <div class="members-wraper">
-
           <div class="postdocs">
             <div class="tittle-members">
-              <h1>Guest Researchers/Postdocs</h1>
-            </div><!--tittle-members-->
+              <h1>Professores</h1>
+            </div>
+            <!--tittle-members-->
             <div class="single-post">
               <div class="photo-members">
                 <img src="./imgs/Helio_sala1r.jpg" alt="" />
@@ -200,8 +200,9 @@
 
           <div class="phd">
             <div class="tittle-members">
-              <h1>Guest Researchers/Postdocs</h1>
-            </div><!--tittle-members-->
+              <h1>Pós-doutorandos</h1>
+            </div>
+            <!--tittle-members-->
             <div class="single-post">
               <div class="photo-members">
                 <img src="./imgs/Helio_sala1r.jpg" alt="" />
@@ -257,8 +258,9 @@
 
           <div class="students">
             <div class="tittle-members">
-              <h1>Guest Researchers/Postdocs</h1>
-            </div><!--tittle-members-->
+              <h1>Mestrandos</h1>
+            </div>
+            <!--tittle-members-->
             <div class="single-post">
               <div class="photo-members">
                 <img src="./imgs/Helio_sala1r.jpg" alt="" />
@@ -314,8 +316,9 @@
 
           <div class="bcsStuden">
             <div class="tittle-members">
-              <h1>Guest Researchers/Postdocs</h1>
-            </div><!--tittle-members-->
+              <h1>Graduandos</h1>
+            </div>
+            <!--tittle-members-->
             <div class="single-post">
               <div class="photo-members">
                 <img src="./imgs/Helio_sala1r.jpg" alt="" />
@@ -422,6 +425,9 @@
         <!--logo-footer-->
       </div>
       <!--footer-singles-->
+      <div class="versionEn">
+        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
+    </div><!--versionEn-->
     </footer>
 
     <script src="./scripts/heade.js"></script>
