--- a/publications.html
+++ b/publications.html
@@ -28,26 +28,26 @@
 
       <nav class="desktop">
           <ul>
-              <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-              <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
-              <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
-              </li>
-              <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-              <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
-              <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
+            </li>
+            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
           </ul>
       </nav>
       <!--desktop-->
 
       <nav class="mobile" id="mobile">
           <ul>
-              <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-              <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
-              <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
-              </li>
-              <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-              <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
-              <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
+            </li>
+            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
           </ul>
       </nav>
       <!--mobile-->
@@ -165,6 +165,9 @@
           <!--logo-footer-->
       </div>
       <!--footer-singles-->
+      <div class="versionEn">
+        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
+    </div><!--versionEn-->
   </footer>
     <script src="./scripts/heade.js"></script>
   </body>
