--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Página de members pode ser inspirada nessa. ok
 https://www.felipefantuzzi.org/latin-america
 
 De colaboradores nessa. -->
+
                 <header>
                     <div class="logo">
                         <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
@@ -41,26 +42,26 @@ De colaboradores nessa. -->
 
                     <nav class="desktop">
                         <ul>
-                            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
-                            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
+                            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+                            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+                            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
                             </li>
-                            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
-                            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+                            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
                         </ul>
                     </nav>
                     <!--desktop-->
 
                     <nav class="mobile" id="mobile">
                         <ul>
-                            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
-                            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
+                            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
+                            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
+                            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
                             </li>
-                            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
-                            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
+                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
+                            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
                         </ul>
                     </nav>
                     <!--mobile-->
@@ -72,7 +73,7 @@ De colaboradores nessa. -->
 
             <div class="content">
                 <div class="prof">
-                    <div class="prof-members.html">
+                    <div class="prof-members">
                         <a href="#"><img src="./imgs/5856e43d-99d7-400c-9c4d-d67201fadf99.jpg"></a>
                     </div>
                     <!--prof-members.html-->
@@ -147,9 +148,11 @@ De colaboradores nessa. -->
                         <!--logo-footer-->
                     </div>
                     <!--footer-singles-->
-                </footer>
-      
 
+                    <div class="versionEn">
+                        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
+                    </div><!--versionEn-->
+                </footer>
             <script src="./scripts/heade.js"></script>
             <script src="./scripts/slide.js"></script>
         </body>
