Atualização e modificações das paginas

--- a/collaborations.html
+++ b/collaborations.html
@@ -72,7 +72,7 @@
           <!--photo-collaborations-->
 
           <div class="description-collaborations">
-            <h1>Nome da universidade</h1>
+            <h1>Nome do Grupo</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
               magni eaque maiores similique at voluptas necessitatibus accusamus
@@ -83,11 +83,26 @@
           <!--description-collaborations-->
         </div>
         <!--collaborations-single-->
+        <div class="collaborations-single">
+          <div class="photo-collaborations">
+            <div class="univer">
+              <img src="./imgs/640px-Flag_of_Brazil.svg.webp" alt="" />
+            </div>
+            <!--univer-->
+          </div>
+          <!--photo-collaborations-->
 
-        <div class="collaborations-single"></div>
-        <!--collaborations-single-->
-
-        <div class="collaborations-single"></div>
+          <div class="description-collaborations">
+            <h1>Nome do Grupo</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+              magni eaque maiores similique at voluptas necessitatibus accusamus
+              minus, consectetur, excepturi hic facere? Error ratione neque quas
+              exercitationem eos dolore excepturi?
+            </p>
+          </div>
+          <!--description-collaborations-->
+        </div>
         <!--collaborations-single-->
       </div>
       <!--collaborations-->
@@ -97,7 +112,7 @@
     <footer>
       <div class="footer-singles">
         <div class="locali-footer">
-          <h1>localização</h1>
+          <h1>Localização</h1>
 
           <p>
             Universidade Federal de Minas Gerais, Departamento de Química - ICEx
@@ -107,7 +122,7 @@
           <p>31.270-901 Belo Horizonte - MG Brasil</p>
           <p>Telefone: (88) 34236962</p>
           <p>Fax: (88) 34236963</p>
-          <a href="#" target="_blank" rel="noopener noreferrer"
+          <a href="./contact.html" target="_blank" rel="noopener noreferrer"
             >Clique aqui para mais informações</a
           >
         </div>
@@ -126,8 +141,8 @@
           <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            veja todas as Noticas</a
+          <a href="./news.html" target="_blank" rel="noopener noreferrer">
+            Veja todas as Noticas</a
           >
         </div>
         <!--infor-footer-->
