--- a/contact.html
+++ b/contact.html
@@ -77,22 +77,26 @@
               </ul>
 
               <ul>
-                <li>instagram</li>
-                <li>facebook</li>
+                <li>Twitter</li>
+                <li>GitHub</li>
               </ul>
             </nav>
           </div>
           <!--contact-locali-->
 
           <div class="contact-locali-img">
-            <img
-              src="./imgs/8fcd0f83-1f5d-4b80-aab3-976b07c17999.jpeg"
-              alt=""
-            />
-            <img
-              src="./imgs/8fcd0f83-1f5d-4b80-aab3-976b07c17999.jpeg"
-              alt=""
-            />
+            <div class="img-locali">
+              <h1>
+                Foto da Universidade
+              </h1>
+              <img src="./imgs/5856e43d-99d7-400c-9c4d-d67201fadf99.jpg" alt="">
+            </div><!--img-locali-->
+            <div class="img-locali">
+              <h1>
+                Foto do Departamento
+              </h1>
+              <img src="./imgs/5856e43d-99d7-400c-9c4d-d67201fadf99.jpg" alt="">
+            </div><!--img-locali-->
           </div>
           <!--contact-locali-->
         </div>
@@ -105,7 +109,7 @@
     <footer>
       <div class="footer-singles">
           <div class="locali-footer">
-              <h1>localização</h1>
+              <h1>Localização</h1>
 
               <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
                   Setor  Inorgânica.</p>
@@ -114,7 +118,7 @@
                   Brasil</p>
               <p>Telefone: (88) 34236962</p>
               <p>Fax: (88) 34236963</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
+              <a href="./contact.html" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
           </div>
           <!--locali-footer-->
       </div>
@@ -131,7 +135,9 @@
               <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
               <span>16/09/1111</span>
 
-              <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
+              <a href="./news.html" target="_blank" rel="noopener noreferrer">
+                Veja todas as Noticas</a
+              >
           </div>
           <!--infor-footer-->
       </div>
