--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@
                 crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <body>
-<!-- Coloca o nome GPQIT em cima do texto grande e no foot. ok
 
-Coloca o nome members no lugar de members.html. ok
-
-Coloca o nome Collaborations no luga de opening. ok
-
-Atualiza isso tudo para as outras páginas. ok
-
-INSPIRAÇÕES
-
-https://www.felipefantuzzi.org/current-members
-
-Página de members pode ser inspirada nessa. ok
-
-https://www.felipefantuzzi.org/latin-america
-
-De colaboradores nessa. -->
 
                 <header>
                     <div class="logo">
@@ -78,7 +62,7 @@ De colaboradores nessa. -->
                     </div>
                     <!--prof-members.html-->
                     <div class="prof-infor">
-                        <h1>Grupo de Pesquisa em Quimica Inorganica Teorica</h1>
+                        <h1>Grupo de Pesquisa em Quimica Inorgânica Teórica</h1>
                         <p>Ao terminarmos o nosso doutoramento, em 1997, fomos recebidos prontamente pelo Prof. Wagner B. De Almeida em seu grupo de pesquisa para um estágio de Pós-Doutorado. Já nesta época, o Laboratório de Química Computacional e Modelagem Molecular -LQC-MM se encontrava consolidado com grande prestígio nacional e internacional. Em 1999, entramos para o quadro permanente do Departamento de Química na área de concentração em Química Inorgânica. Era um grande desafio: estabelecer a linha de pesquisa em Química Teórica na área de concentração em Química Inorgânica. Neste início, contamos com a ajuda inestimável do Prof. Wagner B. De Almeida que colocou o seu laboratório e suas facilidades a nossa disposição. Nos apoiou nas nossas iniciativas, abrindo espaço para uma colaboração efetiva e muito produtiva. Desta forma, participamos do LQC-MM como pesquisador associado até 2002. O nosso esforço em estabelecer e consolidarmos a nossa linha de pesquisa rendeu frutos. Com os novos alunos de graduação e de pós-graduação e a necessidade de espaço físico para novos equipamentos, tornou-se necessário o surgimento de um novo grupo de pesquisa: GPQIT.
 
                             O GPQIT, está no Diretório de Pesquisa do CNPq e é reconhecido formalmente pela UFMG, tem como objetivo o desenvolvimento e aplicação de métodos teóricos no estudo de sistemas inorgânicos de interesse para o meio ambiente, para a catálise e para a área biológica.</p>
@@ -109,7 +93,7 @@ De colaboradores nessa. -->
                 <footer>
                     <div class="footer-singles">
                         <div class="locali-footer">
-                            <h1>localização</h1>
+                            <h1>Localização</h1>
 
                             <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
                                 Setor  Inorgânica.</p>
@@ -118,7 +102,7 @@ De colaboradores nessa. -->
                                 Brasil</p>
                             <p>Telefone: (88) 34236962</p>
                             <p>Fax: (88) 34236963</p>
-                            <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
+                            <a href="./contact.html" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
                         </div>
                         <!--locali-footer-->
                     </div>
@@ -135,7 +119,9 @@ De colaboradores nessa. -->
                             <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
                             <span>16/09/1111</span>
 
-                            <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
+                            <a href="./news.html" target="_blank" rel="noopener noreferrer">
+                                Veja todas as Noticas</a
+                              >
                         </div>
                         <!--infor-footer-->
                     </div>
