--- a/members.html
+++ b/members.html
@@ -200,7 +200,7 @@
 
           <div class="phd">
             <div class="tittle-members">
-              <h1>Pós-doutorandos</h1>
+              <h1>Pós-Doutorandos</h1>
             </div>
             <!--tittle-members-->
             <div class="single-post">
@@ -258,7 +258,7 @@
 
           <div class="students">
             <div class="tittle-members">
-              <h1>Mestrandos</h1>
+              <h1>Doutorandos</h1>
             </div>
             <!--tittle-members-->
             <div class="single-post">
@@ -313,6 +313,64 @@
             <!--single-post-->
           </div>
           <!--students-->
+
+          <div class="bcsStuden">
+            <div class="tittle-members">
+              <h1>Mestrandos</h1>
+            </div>
+            <!--tittle-members-->
+            <div class="single-post">
+              <div class="photo-members">
+                <img src="./imgs/Helio_sala1r.jpg" alt="" />
+              </div>
+              <!--photo-members-->
+
+              <div class="description-members">
+                <h1>Nome</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non
+                  ut perspiciatis sequi praesentium nemo minus tempore ullam
+                  velit excepturi nostrum, laudantium voluptas, incidunt, rerum
+                  facere totam at nam officiis? Aliquid.
+                </p>
+              </div>
+              <!--description-members-->
+
+              <div class="contact-members">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i>
+              </div>
+              <!--contact-members-->
+            </div>
+            <!--single-post-->
+            <div class="single-post">
+              <div class="photo-members">
+                <img src="./imgs/Helio_sala1r.jpg" alt="" />
+              </div>
+              <!--photo-members-->
+
+              <div class="description-members">
+                <h1>Nome</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non
+                  ut perspiciatis sequi praesentium nemo minus tempore ullam
+                  velit excepturi nostrum, laudantium voluptas, incidunt, rerum
+                  facere totam at nam officiis? Aliquid.
+                </p>
+              </div>
+              <!--description-members-->
+
+              <div class="contact-members">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars"></i>
+              </div>
+              <!--contact-members-->
+            </div>
+            <!--single-post-->
+          </div>
+          <!--bcsStuden-->
 
           <div class="bcsStuden">
             <div class="tittle-members">
@@ -381,7 +439,7 @@
     <footer>
       <div class="footer-singles">
         <div class="locali-footer">
-          <h1>localização</h1>
+          <h1>Localização</h1>
 
           <p>
             Universidade Federal de Minas Gerais, Departamento de Química - ICEx
@@ -391,7 +449,7 @@
           <p>31.270-901 Belo Horizonte - MG Brasil</p>
           <p>Telefone: (88) 34236962</p>
           <p>Fax: (88) 34236963</p>
-          <a href="#" target="_blank" rel="noopener noreferrer"
+          <a href="./contact.html" target="_blank" rel="noopener noreferrer"
             >Clique aqui para mais informações</a
           >
         </div>
@@ -410,8 +468,8 @@
           <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            veja todas as Noticas</a
+          <a href="./news.html" target="_blank" rel="noopener noreferrer">
+            Veja todas as Noticas</a
           >
         </div>
         <!--infor-footer-->
