--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
     <div class="content">
       <div class="news">
         <div class="title-news">
-          <h1>Noticas do grupo</h1>
+          <h1>Notícas do Grupo</h1>
         </div>
         <!--title-news-->
         <nav class="newsNav">
@@ -144,7 +144,7 @@
     <footer>
       <div class="footer-singles">
         <div class="locali-footer">
-          <h1>localização</h1>
+          <h1>Localização</h1>
 
           <p>
             Universidade Federal de Minas Gerais, Departamento de Química - ICEx
@@ -154,7 +154,7 @@
           <p>31.270-901 Belo Horizonte - MG Brasil</p>
           <p>Telefone: (88) 34236962</p>
           <p>Fax: (88) 34236963</p>
-          <a href="#" target="_blank" rel="noopener noreferrer"
+          <a href="./contact.html" target="_blank" rel="noopener noreferrer"
             >Clique aqui para mais informações</a
           >
         </div>
@@ -173,8 +173,8 @@
           <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            veja todas as Noticas</a
+          <a href="./news.html" target="_blank" rel="noopener noreferrer">
+            Veja todas as Noticas</a
           >
         </div>
         <!--infor-footer-->
