--- a/publications.html
+++ b/publications.html
@@ -59,13 +59,14 @@
     <div class="content">
       <div class="publications">
         <div class="title-publications">
-          <h1>Publicação</h1>
+          <h1>Publicações</h1>
         </div>
         <!--title-publications-->
 
         <div class="publications-wraper">
           <div class="single-publications">
             <div class="publications-description">
+              <h2>2023</h2>
               <p>
                 '1'
                 <a href="#"
@@ -92,6 +93,7 @@
 
           <div class="single-publications">
             <div class="publications-description">
+              <h2>2022</h2>
               <p>
                 '1'
                 <a href="#"
@@ -126,7 +128,7 @@
     <footer>
       <div class="footer-singles">
           <div class="locali-footer">
-              <h1>localização</h1>
+              <h1>Localização</h1>
 
               <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
                   Setor  Inorgânica.</p>
@@ -135,7 +137,7 @@
                   Brasil</p>
               <p>Telefone: (88) 34236962</p>
               <p>Fax: (88) 34236963</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
+              <a href="./contact.html" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
           </div>
           <!--locali-footer-->
       </div>
@@ -152,7 +154,9 @@
               <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
               <span>16/09/1111</span>
 
-              <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
+              <a href="./news.html" target="_blank" rel="noopener noreferrer">
+                Veja todas as Noticas</a
+              >
           </div>
           <!--infor-footer-->
       </div>
