--- a/research.html
+++ b/research.html
@@ -187,7 +187,7 @@
     <footer>
       <div class="footer-singles">
           <div class="locali-footer">
-              <h1>localização</h1>
+              <h1>Localização</h1>
 
               <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
                   Setor  Inorgânica.</p>
@@ -196,7 +196,7 @@
                   Brasil</p>
               <p>Telefone: (88) 34236962</p>
               <p>Fax: (88) 34236963</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
+              <a href="./contact.html" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
           </div>
           <!--locali-footer-->
       </div>
@@ -213,7 +213,9 @@
               <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
               <span>16/09/1111</span>
 
-              <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
+              <a href="./news.html" target="_blank" rel="noopener noreferrer">
+                Veja todas as Noticas</a
+              >
           </div>
           <!--infor-footer-->
       </div>
